[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/base_theme.tres" type="Theme" id=1]
[ext_resource path="res://ui/MainMenuGUI.gd" type="Script" id=2]

[node name="MainMenuGUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 640, 480 )
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.235294, 0.352941, 0.27451, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 600.0
margin_bottom = 440.0
size_flags_horizontal = 5
size_flags_vertical = 5

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/MainContainer"]
margin_right = 197.0
margin_bottom = 440.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer/MainContainer/MarginContainer"]
margin_right = 197.0
margin_bottom = 440.0
size_flags_vertical = 5
text = "New Stuff!"
valign = 2

[node name="ButtonContainer" type="VBoxContainer" parent="MarginContainer/MainContainer"]
margin_left = 201.0
margin_right = 398.0
margin_bottom = 440.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 18
alignment = 1

[node name="PlayButton" type="Button" parent="MarginContainer/MainContainer/ButtonContainer"]
margin_top = 163.0
margin_right = 197.0
margin_bottom = 189.0
text = "Play"

[node name="ScoreButton" type="Button" parent="MarginContainer/MainContainer/ButtonContainer"]
margin_top = 207.0
margin_right = 197.0
margin_bottom = 233.0
text = "High Scores"

[node name="QuitButton" type="Button" parent="MarginContainer/MainContainer/ButtonContainer"]
margin_top = 251.0
margin_right = 197.0
margin_bottom = 277.0
text = "Quit"

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/MainContainer"]
margin_left = 402.0
margin_right = 600.0
margin_bottom = 440.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer/MainContainer/MarginContainer3"]
margin_right = 198.0
margin_bottom = 440.0
size_flags_vertical = 5
text = "v0.2"
align = 2
valign = 2

[connection signal="button_up" from="MarginContainer/MainContainer/ButtonContainer/PlayButton" to="." method="_on_PlayButton_button_up"]
[connection signal="button_up" from="MarginContainer/MainContainer/ButtonContainer/QuitButton" to="." method="_on_QuitButton_button_up"]
